--- a/index.html
+++ b/index.html
@@ -9,6 +9,50 @@
 </head>
 
 <body>
-  <h1>Nam Nguyen</h1>
+  <header>
+    <nav>
+      <ul>
+	    <li><a href="#">Resume</a></li>
+        <li><a href="soccer.html">My Favorite Soccer Club</a></li>
+        <li><a href="basketball.html">My Favorite Basketball Club</a></li>
+      </ul>
+    </nav>
+    <h1>Nam Nguyen</h1>
+      <p>Address: 3241 South Wabash Ave, 60616</p>
+      <p>Phone number: (347) 431-5972</p>
+      <p>Email address: nnguyen17@hawk.iit.edu</p>
+      <p>Major: Information Technology and Management</p>
+  </header>
+  <h2>Education:</h2>
+    <ul>
+      <li><strong>Elementary School</strong>: Quang Trung</li>
+      <li><strong>Secondary School</strong>: Trung Vuong</li>
+      <li><strong>High School</strong>: Viet Duc</li>
+      <li><strong>University</strong>: Illinois Institute of Technology (Currently)</li>
+	</ul>
+  <h2>Skills:</h2>
+  <h3>Courses at IIT:</h3>
+  <h4>Been through:</h4>
+    <ul>
+	  <li>ITM 301: Intro OS and Hardware</li>
+	  <li>PHYS 200: Energy, Waves, Mtrls, and Forces</li>
+	  <li>ITM 311: Intro to Software Development</li>
+	  <li>HUM 200: Medival Love</li>
+	</ul>
+  <h4>Currently:</h4>
+    <ul>
+	  <li>EG 225: Eng Graphics for Non-Engineers</li>
+	  <li>ITMD 361: Fund of Web Development</li>
+	  <li>MATH 180: Fundamentals of Discrete Math</li>
+	  <li>PSYC 221: Intro to Psychological Science</li>
+	  <li>ITMO 330: Intro to Data Network and Internet</li>
+	  <li>SSCI 209: Social Science Research Method</li>
+	</ul>
+  <h2>Experiences:</h2>
+    <ul>
+	  <li>Viet Duc's Soccer Club</li>
+	  <img src="images/vdsc.jpg" alt="Viet Duc's Soccer Club Logo">
+	  <li>Viet Duc's Basketball Club</li>
+	</ul>
 </body>
 </html>
