add the end to the code of second page

--- a/soccer.html
+++ b/soccer.html
@@ -29,3 +29,5 @@
     <p>Old Trafford has hosted FA Cup semi-finals, England fixtures, matches at the 1966 World Cup and Euro 96 and the 2003 Champions League Final, as well as rugby league's annual Super League Grand Final and the final of two Rugby League World Cups. It also hosted football matches at the 2012 Summer Olympics, including women's international football for the first time in its history.</p>
   <h3>This is the highlight from the UCL final in 1999: the match between Manchester United and Bayern Munich. Manchester United came back just in 2 minutes in the addtional times.</h3>
   <video controls="controls" src="https://www.youtube.com/watch?v=TxDgwmtrB-I"></video>
+</body>
+</html>
