--- a/index.html
+++ b/index.html
@@ -49,11 +49,9 @@
 	  <li>SSCI 209: Social Science Research Method</li>
 	</ul>
   <h2>Experiences:</h2>
-    <ul>
-	  <li>Viet Duc's Soccer Club</li>
+  <h3>Viet Duc's Soccer Club</h3>
 	  <img src="images/vdsc.jpg" alt="Viet Duc's Soccer Club Logo">
-	  <li>Viet Duc's Basketball Club</li>
+  <h3>Viet Duc's Basketball Club</h3>
 	  <img src="images/vdbc.jpg" alt="Viet Duc's Basketball Club Logo">
-	</ul>
 </body>
 </html>
