--- a/soccer.html
+++ b/soccer.html
@@ -28,6 +28,8 @@
     <p>Nicknamed "The Theatre of Dreams" by Bobby Charlton,[3] Old Trafford has been United's home ground since 1910, although from 1941 to 1949 the club shared Maine Road with local rivals Manchester City as a result of Second World War bomb damage. Old Trafford underwent several expansions in the 1990s, and 2000s, including the addition of extra tiers to the North, West and East Stands, almost returning the stadium to its original capacity of 80,000. Future expansion is likely to involve the addition of a second tier to the South Stand, which would raise the capacity to around 88,000. The stadium's record attendance was recorded in 1939, when 76,962 spectators watched the FA Cup semi-final between Wolverhampton Wanderers and Grimsby Town.</p>
     <p>Old Trafford has hosted FA Cup semi-finals, England fixtures, matches at the 1966 World Cup and Euro 96 and the 2003 Champions League Final, as well as rugby league's annual Super League Grand Final and the final of two Rugby League World Cups. It also hosted football matches at the 2012 Summer Olympics, including women's international football for the first time in its history.</p>
   <h3>This is the highlight from the UCL final in 1999: the match between Manchester United and Bayern Munich. Manchester United came back just in 2 minutes in the addtional times.</h3>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/TxDgwmtrB-I" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" 
+  src="https://www.youtube.com/embed/TxDgwmtrB-I">
+  </iframe>
 </body>
 </html>
