--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
       </ul>
     </nav>
     <h1>Nam Nguyen</h1>
+	<section>
       <p>Address: 3241 South Wabash Ave, 60616</p>
       <p>Phone number: (347) 431-5972</p>
       <p>Email address: nnguyen17@hawk.iit.edu</p>
       <p>Major: Information Technology and Management</p>
+	</section>
   </header>
   <h2>Education:</h2>
     <ul>
