--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume</title>
 </head>
 
@@ -25,6 +23,7 @@
       <p>Major: Information Technology and Management</p>
 	</section>
   </header>
+  <section>
   <h2>Education:</h2>
     <ul>
       <li><strong>Elementary School</strong>: Quang Trung</li>
@@ -32,6 +31,8 @@
       <li><strong>High School</strong>: Viet Duc</li>
       <li><strong>University</strong>: Illinois Institute of Technology (Currently)</li>
 	</ul>
+  </section>
+  <section>
   <h2>Skills:</h2>
   <h3>Courses at IIT:</h3>
   <h4>Been through:</h4>
@@ -50,10 +51,13 @@
 	  <li>ITMO 330: Intro to Data Network and Internet</li>
 	  <li>SSCI 209: Social Science Research Method</li>
 	</ul>
+  </section>
+  <section>
   <h2>Experiences:</h2>
   <h3>Viet Duc's Soccer Club</h3>
 	  <img src="images/vdsc.jpg" alt="Viet Duc's Soccer Club Logo">
   <h3>Viet Duc's Basketball Club</h3>
 	  <img src="images/vdbc.jpg" alt="Viet Duc's Basketball Club Logo">
+  </section>
 </body>
 </html>
