--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Resume</title>
+  <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <li><a href="basketball.html">My Favorite Basketball Club</a></li>
       </ul>
     </nav>
-	<section>
+	<section id="sec1">
     <h1>Nam Nguyen</h1>
       <p>Address: 3241 South Wabash Ave, 60616</p>
       <p>Phone number: (347) 431-5972</p>
@@ -23,7 +24,7 @@
       <p>Major: Information Technology and Management</p>
 	</section>
   </header>
-  <section>
+  <section id="sec2">
   <h2>Education:</h2>
     <ul>
       <li><strong>Elementary School</strong>: Quang Trung</li>
@@ -32,7 +33,7 @@
       <li><strong>University</strong>: Illinois Institute of Technology (Currently)</li>
 	</ul>
   </section>
-  <section>
+  <section id="sec3">
   <h2>Skills:</h2>
   <h3>Courses at IIT:</h3>
   <h4>Been through:</h4>
@@ -51,7 +52,7 @@
 	  <li>ITMO 330: Intro to Data Network and Internet</li>
 	  <li>SSCI 209: Social Science Research Method</li>
 	</ul>
-  </section>
+  </section id="sec4">
   <section>
   <h2>Experiences:</h2>
   <h3>Viet Duc's Soccer Club</h3>
