--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <header>
+    <div class = "navigation">
     <nav>
       <ul>
 	    <li><a href="#">Resume</a></li>
@@ -16,7 +17,8 @@
         <li><a href="basketball.html">My Favorite Basketball Club</a></li>
       </ul>
     </nav>
-	<section id="sec1">
+	</div>
+	<section>
     <h1>Nam Nguyen</h1>
       <p>Address: 3241 South Wabash Ave, 60616</p>
       <p>Phone number: (347) 431-5972</p>
@@ -24,7 +26,7 @@
       <p>Major: Information Technology and Management</p>
 	</section>
   </header>
-  <section id="sec2">
+  <section>
   <h2>Education:</h2>
     <ul>
       <li><strong>Elementary School</strong>: Quang Trung</li>
@@ -33,7 +35,7 @@
       <li><strong>University</strong>: Illinois Institute of Technology (Currently)</li>
 	</ul>
   </section>
-  <section id="sec3">
+  <section>
   <h2>Skills:</h2>
   <h3>Courses at IIT:</h3>
   <h4>Been through:</h4>
@@ -52,7 +54,7 @@
 	  <li>ITMO 330: Intro to Data Network and Internet</li>
 	  <li>SSCI 209: Social Science Research Method</li>
 	</ul>
-  </section id="sec4">
+  </section>
   <section>
   <h2>Experiences:</h2>
   <h3>Viet Duc's Soccer Club</h3>
