--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Resume</title>
-  <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
 <body>
@@ -18,6 +20,7 @@
       </ul>
     </nav>
 	</div>
+	<div class = "sec1">
 	<section>
     <h1>Nam Nguyen</h1>
       <p>Address: 3241 South Wabash Ave, 60616</p>
@@ -25,7 +28,9 @@
       <p>Email address: nnguyen17@hawk.iit.edu</p>
       <p>Major: Information Technology and Management</p>
 	</section>
+	</div>
   </header>
+  <div class = "sec2">
   <section>
   <h2>Education:</h2>
     <ul>
@@ -35,6 +40,8 @@
       <li><strong>University</strong>: Illinois Institute of Technology (Currently)</li>
 	</ul>
   </section>
+  </div>
+  <div class = "sec3">
   <section>
   <h2>Skills:</h2>
   <h3>Courses at IIT:</h3>
@@ -55,6 +62,8 @@
 	  <li>SSCI 209: Social Science Research Method</li>
 	</ul>
   </section>
+  </div>
+  <div class = "sec4">
   <section>
   <h2>Experiences:</h2>
   <h3>Viet Duc's Soccer Club</h3>
@@ -62,5 +71,6 @@
   <h3>Viet Duc's Basketball Club</h3>
 	  <img src="images/vdbc.jpg" alt="Viet Duc's Basketball Club Logo">
   </section>
+  </div>
 </body>
 </html>
