css for resume page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </head>
 
 <body>
@@ -32,44 +33,45 @@
   </header>
   <div class = "sec2">
   <section>
-  <h2>Education:</h2>
+  <h2>Education</h2>
     <ul>
       <li><strong>Elementary School</strong>: Quang Trung</li>
       <li><strong>Secondary School</strong>: Trung Vuong</li>
       <li><strong>High School</strong>: Viet Duc</li>
       <li><strong>University</strong>: Illinois Institute of Technology (Currently)</li>
 	</ul>
+    <img src="images/iit.jpg" id="iit" alt="IIT Logo">
   </section>
   </div>
   <div class = "sec3">
   <section>
-  <h2>Skills:</h2>
+  <h2>Skills</h2>
   <h3>Courses at IIT:</h3>
   <h4>Been through:</h4>
     <ul>
-	  <li>ITM 301: Intro OS and Hardware</li>
-	  <li>PHYS 200: Energy, Waves, Mtrls, and Forces</li>
-	  <li>ITM 311: Intro to Software Development</li>
-	  <li>HUM 200: Medival Love</li>
+	  <li><strong>ITM 301</strong>: Intro OS and Hardware</li>
+	  <li><strong>PHYS 200</strong>: Energy, Waves, Mtrls, and Forces</li>
+	  <li><strong>ITM 311</strong>: Intro to Software Development</li>
+	  <li><strong>HUM 200</strong>: Medival Love</li>
 	</ul>
   <h4>Currently:</h4>
     <ul>
-	  <li>EG 225: Eng Graphics for Non-Engineers</li>
-	  <li>ITMD 361: Fund of Web Development</li>
-	  <li>MATH 180: Fundamentals of Discrete Math</li>
-	  <li>PSYC 221: Intro to Psychological Science</li>
-	  <li>ITMO 330: Intro to Data Network and Internet</li>
-	  <li>SSCI 209: Social Science Research Method</li>
+	  <li><strong>EG 225</strong>: Eng Graphics for Non-Engineers</li>
+	  <li><strong>ITMD 361</strong>: Fund of Web Development</li>
+	  <li><strong>MATH 180</strong>: Fundamentals of Discrete Math</li>
+	  <li><strong>PSYC 221</strong>: Intro to Psychological Science</li>
+	  <li><strong>ITMO 330</strong>: Intro to Data Network and Internet</li>
+	  <li><strong>SSCI 209</strong>: Social Science Research Method</li>
 	</ul>
   </section>
   </div>
   <div class = "sec4">
   <section>
-  <h2>Experiences:</h2>
+  <h2>Experiences</h2>
   <h3>Viet Duc's Soccer Club</h3>
-	  <img src="images/vdsc.jpg" alt="Viet Duc's Soccer Club Logo">
+	  <img src="images/vdsc.jpg" id="vdsc" alt="Viet Duc's Soccer Club Logo">
   <h3>Viet Duc's Basketball Club</h3>
-	  <img src="images/vdbc.jpg" alt="Viet Duc's Basketball Club Logo">
+	  <img src="images/vdbc.jpg" id="vdbc" alt="Viet Duc's Basketball Club Logo">
   </section>
   </div>
 </body>
