--- a/soccer.html
+++ b/soccer.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>My Favorite Soccer Club</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 
 <body>
   <header>
+    <div class = "navigation">
     <nav>
       <ul>
 	    <li><a href="index.html">Resume</a></li>
@@ -15,25 +20,32 @@
         <li><a href="basketball.html">My Favorite Basketball Club</a></li>
       </ul>
     </nav>
+	</div>
   </header>
+  <div class = "sec5">
   <section>
   <h1>Manchester United</h1>
-  <img src="images/manutd.jpg" alt="Manchester United's Logo">
+  <img src="images/manutd.jpg" id="mu" alt="Manchester United's Logo">
   <p>Manchester United Football Club, commonly known as Man United, or simply United, is a professional football club based in Old Trafford, Greater Manchester, England, that competes in the Premier League, the top flight of English football. Nicknamed "the Red Devils", the club was founded as Newton Heath LYR Football Club in 1878, changed its name to Manchester United in 1902 and moved to its current stadium, Old Trafford, in 1910.</p>
   <p>Manchester United have won more trophies than any other club in English football, with a record 20 League titles, 12 FA Cups, 5 League Cups and a record 21 FA Community Shields. United have also won three UEFA Champions Leagues, one UEFA Europa League, one UEFA Cup Winners' Cup, one UEFA Super Cup, one Intercontinental Cup and one FIFA Club World Cup. In 1998–99, the club became the first in the history of English football to achieve the continental European treble. By winning the UEFA Europa League in 2016–17, they became one of five clubs to have won all three main UEFA club competitions, and the only English club to have won every competition available to them.
   </section>
+  </div>
+  <div class = "sec6">
   <section>
-  <h2>Old Trafford Staidum</h2>
-    <img src="images/oldtra.jpg" alt="Old Trafford Studium Picture">
+  <h1>Old Trafford Staidum</h1>
+    <img src="images/oldtra.jpg" id="ots" alt="Old Trafford Studium Picture">
     <p>Old Trafford is a football stadium in Old Trafford, Greater Manchester, England, and the home of Manchester United. With a capacity of 74,994,[1] it is the largest club football stadium (and second largest football stadium overall after Wembley Stadium) in the United Kingdom, and the eleventh-largest in Europe.[2] It is about 0.5 miles (800 m) from Old Trafford Cricket Ground and the adjacent tram stop.</p>
     <p>Nicknamed "The Theatre of Dreams" by Bobby Charlton,[3] Old Trafford has been United's home ground since 1910, although from 1941 to 1949 the club shared Maine Road with local rivals Manchester City as a result of Second World War bomb damage. Old Trafford underwent several expansions in the 1990s, and 2000s, including the addition of extra tiers to the North, West and East Stands, almost returning the stadium to its original capacity of 80,000. Future expansion is likely to involve the addition of a second tier to the South Stand, which would raise the capacity to around 88,000. The stadium's record attendance was recorded in 1939, when 76,962 spectators watched the FA Cup semi-final between Wolverhampton Wanderers and Grimsby Town.</p>
     <p>Old Trafford has hosted FA Cup semi-finals, England fixtures, matches at the 1966 World Cup and Euro 96 and the 2003 Champions League Final, as well as rugby league's annual Super League Grand Final and the final of two Rugby League World Cups. It also hosted football matches at the 2012 Summer Olympics, including women's international football for the first time in its history.</p>
   </section>
+  </div>
   <section>
+  <div class = "ytvid">
   <h3>This is the highlight from the UCL final in 1999: the match between Manchester United and Bayern Munich. Manchester United came back just in 2 minutes in the addtional times.</h3>
-  <iframe width="560" height="315" 
+  <iframe id="c1" width="560" height="315" 
   src="https://www.youtube.com/embed/TxDgwmtrB-I">
   </iframe>
   </section>
+  </div>
 </body>
 </html>
