fix empty lines of code

--- a/soccer.html
+++ b/soccer.html
@@ -23,6 +23,7 @@
     </nav>
 	</div>
   </header>
+  
   <div class = "sec5">
   <section>
   <h1>Manchester United</h1>
@@ -31,6 +32,7 @@
   <p>Manchester United have won more trophies than any other club in English football, with a record 20 League titles, 12 FA Cups, 5 League Cups and a record 21 FA Community Shields. United have also won three UEFA Champions Leagues, one UEFA Europa League, one UEFA Cup Winners' Cup, one UEFA Super Cup, one Intercontinental Cup and one FIFA Club World Cup. In 1998–99, the club became the first in the history of English football to achieve the continental European treble. By winning the UEFA Europa League in 2016–17, they became one of five clubs to have won all three main UEFA club competitions, and the only English club to have won every competition available to them.
   </section>
   </div>
+  
   <div class = "sec6">
   <section>
   <h1>Old Trafford Staidum</h1>
@@ -40,10 +42,11 @@
     <p>Old Trafford has hosted FA Cup semi-finals, England fixtures, matches at the 1966 World Cup and Euro 96 and the 2003 Champions League Final, as well as rugby league's annual Super League Grand Final and the final of two Rugby League World Cups. It also hosted football matches at the 2012 Summer Olympics, including women's international football for the first time in its history.</p>
   </section>
   </div>
+  
   <section>
   <div class = "ytvid">
   <h3>This is the highlight from the UCL final in 1999: the match between Manchester United and Bayern Munich. Manchester United came back just in 2 minutes in the addtional times.</h3>
-  <iframe id="c1" width="560" height="315" 
+  <iframe id="c1"
   src="https://www.youtube.com/embed/TxDgwmtrB-I">
   </iframe>
   </div>
