add code for new images

--- a/basketball.html
+++ b/basketball.html
@@ -23,6 +23,7 @@
 	</div>
   </header>
   
+  <img src="images/champ2.jpg" id="champ2" alt="OKC celebration Picture">
   <div class = "sec5">
   <section>
   <h1>Oklahoma City Thunder</h1>
