--- a/soccer.html
+++ b/soccer.html
@@ -23,6 +23,7 @@
 	</div>
   </header>
   
+  <img src="images/champ.jpg" id="champ" alt="Manchester United celebration Picture">
   <div class = "sec5">
   <section>
   <h1>Manchester United</h1>
