link map.html in

--- a/basketball.html
+++ b/basketball.html
@@ -19,6 +19,7 @@
 	    <li><a href="index.html">Resume</a></li>
         <li><a href="soccer.html">My Favorite Soccer Club</a></li>
         <li><a href="#">My Favorite Basketball Club</a></li>
+		<li><a href="map.html">Google Map</a></li>
       </ul>
     </nav>
 	</div>
