--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Resume</title>
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="stylesheet" type="text/css" href="css/mediaquery.css" />
   <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
@@ -19,6 +18,7 @@
 	    <li><a href="#">Resume</a></li>
         <li><a href="soccer.html">My Favorite Soccer Club</a></li>
         <li><a href="basketball.html">My Favorite Basketball Club</a></li>
+		<li><a href="map.html">Google Map</a></li>
       </ul>
     </nav>
 	</div>
