--- a/soccer.html
+++ b/soccer.html
@@ -19,6 +19,7 @@
 	    <li><a href="index.html">Resume</a></li>
         <li><a href="#">My Favorite Soccer Club</a></li>
         <li><a href="basketball.html">My Favorite Basketball Club</a></li>
+		<li><a href="map.html">Google Map</a></li>
       </ul>
     </nav>
 	</div>
