--- a/map.html
+++ b/map.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="stylesheet" type="text/css" href="css/mediaquery.css" />
   <link rel="stylesheet" type="text/css" href="css/map.css" />
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3Ear7InsLs5XiI5Yj7o98yntpKC4h1SE&callback=initMap"
-  type="text/javascript"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3Ear7InsLs5XiI5Yj7o98yntpKC4h1SE&callback=initMap"></script>
   <script src="js/script.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
