--- a/map.html
+++ b/map.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/map.css" />
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA3Ear7InsLs5XiI5Yj7o98yntpKC4h1SE&callback=initMap"></script>
   <script src="js/script.js"></script>
+  <script src="js/slide.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 
@@ -29,6 +30,33 @@
   <div id="wrapper">
     <div id="container"></div>
   </div>
+  
+  <p></p>
+        <div class="photoslide">
+      <div class="slideshow-container">
+        <div class="slides" id=start>
+          <div class="numbertext">1 / 3</div>
+          <img src="images/chicago.jpg" alt="The Bean" onload="init()">
+          <h3>The Bean</h3>
+        </div>
+        <div class="slides">
+          <div class="numbertext">2 / 3</div>
+          <img src="images/chicago2.jpg" alt="Chicago River">
+          <h3>Chicago River</h3>
+        </div>
+        <div class="slides">
+          <div class="numbertext">3 / 3</div>
+          <img src="images/chicago3.jpg" alt="Skydeck">
+          <h3>Skydeck Chicago</h3>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div> 
+      <div>
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div> 
 </body>
 </html>
   
